deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vite-notes
  namespace: vite-notes
spec:
  type: ClusterIP
  selector:
    app: vite-notes
  ports:
    - name: http
      port: 80
      targetPort: http
